--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -11,7 +11,7 @@
        
             {% csrf_token %}
         <input type="email"  name="email"  placeholder="E-mail" required><br>
-        <input type="password" name="password" placeholder="Password" required minlength="8" maxlength="10" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Password must be between 8 and 10 characters, contain at least one number, one lowercase letter, and one uppercase letter."><br>
+        <input type="password" name="password" placeholder="Password" required ><br>
 
 
         <p><a href="{% url 'reset'  %}">Forget Your password</a></p>
